test/fixtures/errors/parenthesis.mustache
<!DOCTYPE html>
<html>
    <head>
        <title>Page with error</title>
    </head>
    <body>
        <h1>{{title{{title}}</h1>
    </body>
</html>
